Fix: change links color on IEO details
Fix: timer font style

--- a/src/plugins/ieo/components/Blur/Blur.pcss
+++ b/src/plugins/ieo/components/Blur/Blur.pcss
@@ -16,7 +16,6 @@
       align-items: center;
       color: var(--white);
       display: flex;
-      font-family: Noto Sans;
       font-size: 18px;
       font-style: normal;
       font-weight: normal;
@@ -30,7 +29,6 @@
       align-items: center;
       color: var(--white);
       display: flex;
-      font-family: Noto Sans KR;
       font-size: 40px;
       font-style: normal;
       font-weight: bold;
